tests/negative/generic_too_deep.sans
struct W<T> { val:T }

main() I {
  x = W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<W<I>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> { val: 0 }
  0
}
